<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/scheduleFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_schedule" />

    <item
        android:id="@+id/exercisesFragment"
        android:icon="@drawable/ic_exercise"
        android:title="@string/nav_exercises" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
